<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgCalc"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:background="@color/bgResult"
        android:gravity="end|bottom"
        android:textColor="@color/number_Result"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_multiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onOperator"
            android:text="@string/multiplication"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_subtraction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onOperator"
            android:text="@string/subtraction"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_dot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_zero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onClear"
            android:text="@string/clr"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/bt_sum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onOperator"
            android:text="@string/sum"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bgNumbers"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:textColor="@color/numbers"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>


</LinearLayout>